--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 add_compile_options(-std=c++11)
-add_executable (simpleServer_test main.cpp) 
+add_executable (simpleServer_test main.cpp)
+add_executable (svctest svctest.cpp)  
 target_link_libraries (simpleServer_test LINK_PUBLIC simpleServer pthread) 
+target_link_libraries (svctest LINK_PUBLIC simpleServer pthread)
