change user of service, logging of http parser

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 2.8)
 project (simpleServer)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/)
+
+include_directories(BEFORE src)
+
+
 add_subdirectory (src/simpleServer)
 add_subdirectory (src/tests)
   # The 'test' target runs all but the future tests
