add build-in RPC web client (html5 page)

--- a/src/rpc/CMakeLists.txt
+++ b/src/rpc/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8) 
 add_compile_options(-std=c++11 -fPIC)
-file(GLOB simpleRpcServer_SRC "*.cpp" "linux/*.cpp")
-file(GLOB simpleRpcServer_HDR "*.h" "*.tcc" "linux/*.h" "linux/*.tcc")
+file(GLOB simpleRpcServer_SRC "*.cpp" )
+file(GLOB simpleRpcServer_HDR "*.h" "*.tcc" )
 add_library (simpleRpcServer ${simpleRpcServer_SRC})
 
