--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 
-/cmake_install.cmake
-/CMakeCache.txt
-/Makefile
-/CMakeFiles
+cmake_install.cmake
+CMakeCache.txt
+Makefile
+CMakeFiles
 /bin
 /.settings
 
