Improved linux network dispatcher, tested

--- a/src/rpc/CMakeLists.txt
+++ b/src/rpc/CMakeLists.txt
@@ -3,5 +3,7 @@ add_compile_options(-std=c++14 -fPIC)
 file(GLOB simpleRpcServer_SRC "*.cpp" )
 file(GLOB simpleRpcServer_HDR "*.h" "*.tcc" )
 add_library (simpleRpcServer ${simpleRpcServer_SRC})
+add_executable (rpctest test/rpctest.cpp)
+target_link_libraries (rpctest LINK_PUBLIC simpleRpcServer simpleServer imtjson pthread)
 
  
