compare headers case insensitive

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -4,7 +4,9 @@ add_executable (simpleServer_test main.cpp)
 add_executable (svctest svctest.cpp)
 add_executable (srvtest srvtest.cpp)
 add_executable (wscli wscli.cpp)      
+add_executable (develweb develweb.cpp)      
 target_link_libraries (simpleServer_test LINK_PUBLIC simpleServer ssl crypto pthread) 
 target_link_libraries (svctest LINK_PUBLIC simpleServer pthread)
 target_link_libraries (srvtest LINK_PUBLIC simpleServer pthread)
+target_link_libraries (develweb  LINK_PUBLIC simpleServer pthread)
 target_link_libraries (wscli LINK_PUBLIC simpleServer ssl crypto pthread) 
