--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/simpleServer/shared"]
 	path = src/simpleServer/shared
-	url = https://www.github.com/ondra-novak/ondra_shared.git
+	url = https://github.com/ondra-novak/ondra_shared.git
